# prompt-jet

./: .gitignore  404.html  README.md  index.html  index.txt  next.config.js  package.json  techniques.html  techniques.txt
.github/workflows/: deploy.yml
_next/static/ETEDNaONPkmpMJVeu7x5h/: _buildManifest.js
_next/static/F0-fSiqYnlmlmAkR_Jb82/: _buildManifest.js
_next/static/chunks/: 45-ca3e033b0791452e.js  473-1b3f8e074f556941.js  886-55567635e46ead58.js  902-f152f266d1c098bb.js  925-6dacf154a2d6c2e8.js  main-18a557caab86fd68.js  main-app-cc0eea4e7898f131.js  webpack-b1c100654221c64a.js
_next/static/css/: 099f62799351cfa5.css  644315beac44218e.css
apps/console/: next.config.js  package.json
apps/console/app/: layout.tsx  page.tsx
apps/console/components/: header.tsx  prompt-executor.tsx  theme-toggle.tsx
apps/desktop/: README.md  build-with-server.sh  package.json  test-integration.sh
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/server/: .env.example  README.md  build-server.js  package.json  simple-server.js
apps/server/src/: app.module.ts  app.service.ts  main.ts
apps/web/: next.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: layout.tsx
apps/web/components/: boost-controls.tsx  configuration-notice.tsx  execution-controls.tsx  header.tsx  parallel-config.tsx  prompt-config.tsx  prompt-controls.tsx  prompt-executor.tsx  prompt-header.tsx  prompt-indicators.tsx  prompt-textarea.tsx  results-display.tsx  settings-button.tsx  (+3 more)
(+41 files in other folders)
