[package]
name = "prompt-jet-desktop"
version = "0.1.0"
description = "Desktop version of Prompt Jet"
authors = ["Prompt Jet Team"]
license = "MIT"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "window-hide", "window-maximize", "window-start-dragging", "window-show", "window-unmaximize", "fs-read-file", "notification-all", "fs-rename-file", "shell-open", "dialog-open", "window-minimize", "fs-read-dir", "fs-exists", "fs-copy-file", "dialog-save", "fs-remove-dir", "fs-write-file", "fs-remove-file", "window-unminimize", "window-close", "fs-create-dir", "http-all", "shell-sidecar"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
